# EchoScribe

./: .gitignore  CHANGELOG.md  LICENSES.md  PLAN.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: build-release.yml
scripts/: build_portable.ps1  build_portable.py  download_model.py  record_system_audio.ps1  setup_dev.ps1
src/echoscribe/: app.py  app_web.py  config.py
src/echoscribe/core/: jobs.py  live_session.py  media.py  process.py  recorder.py  subtitles.py  text.py  transcriber.py
src/echoscribe/ui/: main_window.py
tests/: test_paths.py  test_srt.py  test_text.py
