[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "echoscribe"
version = "0.1.0"
description = "Offline Windows audio and video transcription desktop app"
requires-python = ">=3.11"
dependencies = ["faster-whisper==1.2.1"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

